[package]
name = "owasm"
version = "0.1.7"
authors = ["Band Protocol <connect@bandprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/bandprotocol/bandchain/tree/master/owasm"
description = """
TODO
"""

[dependencies]
json = "0.12.0"
num = "*"

[workspace]
members = [
    "chaintests/os001_crypto_price",
    "chaintests/os002_gold_price",
    "chaintests/os003_alphavantage",
    "chaintests/os004_bitcoin_block_count",
    "chaintests/os005_bitcoin_block_hash",
    "chaintests/os006_coingecko_volume",
    "chaintests/os007_crypto_compare_volume",
    "chaintests/os008_eth_gas_station",
    "chaintests/os009_open_sky_network",
    "chaintests/os010_open_weather_map",
    "chaintests/os013_fair_crypto_market_price",
    "chaintests/os011_qrng",
    "chaintests/os012_yahoo_price",
    "chaindebugtests/allocate",
    "chaindebugtests/wrong_args",
    "chaindebugtests/silly",
    "chaindebugtests/moresilly",

]
