    [package]
name = "obi-derive-internal"
version = "0.1.0"
authors = ["Band Protocol <connect@bandprotocol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
syn = {version = "1", features = ["full", "fold"] }
quote = "1"
