[package]
name = "obi-derive"
version = "0.0.2"
authors = ["Band Protocol <connect@bandprotocol.com>"]
edition = "2018"
description = "OBI derive macros"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
obi-derive-internal = { path = "../obi-derive-internal",version = "0.0.2"}
syn = {version = "1.0.62", features = ["full", "fold"] }
quote = "0.3.15"
