[package]
name = "obi"
version = "0.1.0"
authors = ["Band Protocol <connect@bandprotocol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obi-derive = { path = "../obi-derive" }

[features]
default = ["std"]

# Provides impls for common standard library types like Vec<T>.
# Requires a dependency on the Rust standard library.
std = []
