[package]
name = "obi"
version = "0.0.2"
authors = ["Band Protocol <connect@bandprotocol.com>"]
edition = "2018"
description = "OBI"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obi-derive = { path = "../obi-derive" ,version = "0.0.2"}

[features]
default = ["std"]

# Provides impls for common standard library types like Vec<T>.
# Requires a dependency on the Rust standard library.
std = []
