[package]
name = "ethereum_gas_price"
version = "0.1.0"
authors = ["Band Protocol <connect@bandprotocol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owasm = { path = "../.." }
wasm-bindgen = "*"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.1"

[lib]
crate-type = ["cdylib", "rlib"]
